--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@
     </main>
     <footer>
         &copy; AI powered Yoda Translator. Translate wisely, you must!
+        Yoda design by <a href="https://codepen.io/shshaw/pen/QWwyaNR" target="_blank">Shshaw</a>.
     </footer>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
